--- a/features.ipynb
+++ b/features.ipynb
@@ -725,11 +725,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155\n",
+      "hs:  500 lr:  0.1 rs:  0.001 Validation accuracy 0.52\n",
+      "hs:  500 lr:  0.1 rs:  0.005 Validation accuracy 0.524\n",
+      "hs:  500 lr:  0.1 rs:  0.01 Validation accuracy 0.505\n",
+      "hs:  500 lr:  0.5 rs:  0.001 Validation accuracy 0.571\n",
+      "hs:  500 lr:  0.5 rs:  0.005 Validation accuracy 0.53\n",
+      "hs:  500 lr:  0.5 rs:  0.01 Validation accuracy 0.517\n",
+      "hs:  500 lr:  1 rs:  0.001 Validation accuracy 0.566\n",
+      "hs:  500 lr:  1 rs:  0.005 Validation accuracy 0.556\n",
+      "hs:  500 lr:  1 rs:  0.01 Validation accuracy 0.475\n",
+      "hs:  500 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
+      "hs:  500 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
+      "hs:  500 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
+      "hs:  1000 lr:  0.1 rs:  0.001 Validation accuracy 0.518\n",
+      "hs:  1000 lr:  0.1 rs:  0.005 Validation accuracy 0.518\n",
+      "hs:  1000 lr:  0.1 rs:  0.01 Validation accuracy 0.521\n",
+      "hs:  1000 lr:  0.5 rs:  0.001 Validation accuracy 0.585\n",
+      "hs:  1000 lr:  0.5 rs:  0.005 Validation accuracy 0.543\n",
+      "hs:  1000 lr:  0.5 rs:  0.01 Validation accuracy 0.507\n",
+      "hs:  1000 lr:  1 rs:  0.001 Validation accuracy 0.584\n",
+      "hs:  1000 lr:  1 rs:  0.005 Validation accuracy 0.513\n",
+      "hs:  1000 lr:  1 rs:  0.01 Validation accuracy 0.474\n",
+      "hs:  1000 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
+      "hs:  1000 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
+      "hs:  1000 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
+      "hs:  1500 lr:  0.1 rs:  0.001 Validation accuracy 0.532\n",
+      "hs:  1500 lr:  0.1 rs:  0.005 Validation accuracy 0.501\n",
+      "hs:  1500 lr:  0.1 rs:  0.01 Validation accuracy 0.506\n",
+      "hs:  1500 lr:  0.5 rs:  0.001 Validation accuracy 0.583\n",
+      "hs:  1500 lr:  0.5 rs:  0.005 Validation accuracy 0.553\n",
+      "hs:  1500 lr:  0.5 rs:  0.01 Validation accuracy 0.486\n",
+      "hs:  1500 lr:  1 rs:  0.001 Validation accuracy 0.574\n",
+      "hs:  1500 lr:  1 rs:  0.005 Validation accuracy 0.485\n",
+      "hs:  1500 lr:  1 rs:  0.01 Validation accuracy 0.481\n",
+      "hs:  1500 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
+      "hs:  1500 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
+      "hs:  1500 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
+      "best validation accuracy achieved during cross-validation: 0.585000\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.classifiers.neural_net import TwoLayerNet\n",
     "\n",
