up features.ipynb

--- a/features.ipynb
+++ b/features.ipynb
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -735,43 +735,16 @@
      "output_type": "stream",
      "text": [
       "155\n",
-      "hs:  500 lr:  0.1 rs:  0.001 Validation accuracy 0.52\n",
-      "hs:  500 lr:  0.1 rs:  0.005 Validation accuracy 0.524\n",
-      "hs:  500 lr:  0.1 rs:  0.01 Validation accuracy 0.505\n",
-      "hs:  500 lr:  0.5 rs:  0.001 Validation accuracy 0.571\n",
-      "hs:  500 lr:  0.5 rs:  0.005 Validation accuracy 0.53\n",
-      "hs:  500 lr:  0.5 rs:  0.01 Validation accuracy 0.517\n",
-      "hs:  500 lr:  1 rs:  0.001 Validation accuracy 0.566\n",
-      "hs:  500 lr:  1 rs:  0.005 Validation accuracy 0.556\n",
-      "hs:  500 lr:  1 rs:  0.01 Validation accuracy 0.475\n",
-      "hs:  500 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
-      "hs:  500 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
-      "hs:  500 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
-      "hs:  1000 lr:  0.1 rs:  0.001 Validation accuracy 0.518\n",
-      "hs:  1000 lr:  0.1 rs:  0.005 Validation accuracy 0.518\n",
-      "hs:  1000 lr:  0.1 rs:  0.01 Validation accuracy 0.521\n",
-      "hs:  1000 lr:  0.5 rs:  0.001 Validation accuracy 0.585\n",
-      "hs:  1000 lr:  0.5 rs:  0.005 Validation accuracy 0.543\n",
-      "hs:  1000 lr:  0.5 rs:  0.01 Validation accuracy 0.507\n",
-      "hs:  1000 lr:  1 rs:  0.001 Validation accuracy 0.584\n",
-      "hs:  1000 lr:  1 rs:  0.005 Validation accuracy 0.513\n",
-      "hs:  1000 lr:  1 rs:  0.01 Validation accuracy 0.474\n",
-      "hs:  1000 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
-      "hs:  1000 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
-      "hs:  1000 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
-      "hs:  1500 lr:  0.1 rs:  0.001 Validation accuracy 0.532\n",
-      "hs:  1500 lr:  0.1 rs:  0.005 Validation accuracy 0.501\n",
-      "hs:  1500 lr:  0.1 rs:  0.01 Validation accuracy 0.506\n",
-      "hs:  1500 lr:  0.5 rs:  0.001 Validation accuracy 0.583\n",
-      "hs:  1500 lr:  0.5 rs:  0.005 Validation accuracy 0.553\n",
-      "hs:  1500 lr:  0.5 rs:  0.01 Validation accuracy 0.486\n",
-      "hs:  1500 lr:  1 rs:  0.001 Validation accuracy 0.574\n",
-      "hs:  1500 lr:  1 rs:  0.005 Validation accuracy 0.485\n",
-      "hs:  1500 lr:  1 rs:  0.01 Validation accuracy 0.481\n",
-      "hs:  1500 lr:  5 rs:  0.001 Validation accuracy 0.087\n",
-      "hs:  1500 lr:  5 rs:  0.005 Validation accuracy 0.087\n",
-      "hs:  1500 lr:  5 rs:  0.01 Validation accuracy 0.087\n",
-      "best validation accuracy achieved during cross-validation: 0.585000\n"
+      "hs:  500 lr:  1 rs:  0.0005 Validation accuracy 0.584\n",
+      "hs:  500 lr:  1 rs:  0.001 Validation accuracy 0.586\n",
+      "hs:  500 lr:  1 rs:  0.005 Validation accuracy 0.551\n",
+      "hs:  500 lr:  2 rs:  0.0005 Validation accuracy 0.541\n",
+      "hs:  500 lr:  2 rs:  0.001 Validation accuracy 0.557\n",
+      "hs:  500 lr:  2 rs:  0.005 Validation accuracy 0.494\n",
+      "hs:  500 lr:  4 rs:  0.0005 Validation accuracy 0.501\n",
+      "hs:  500 lr:  4 rs:  0.001 Validation accuracy 0.503\n",
+      "hs:  500 lr:  4 rs:  0.005 Validation accuracy 0.201\n",
+      "best validation accuracy achieved during cross-validation: 0.586000\n"
      ]
     }
    ],
@@ -793,9 +766,9 @@
     "################################################################################\n",
     "pass\n",
     "best_val = -1\n",
-    "hidden_sizes = [500, 1000, 1500]\n",
-    "learning_rates = [1e-1, 5e-1, 1, 5]\n",
-    "regularization_strengths = [1e-3, 5e-3, 1e-2]\n",
+    "hidden_sizes = [500]\n",
+    "learning_rates = [1, 2, 4]\n",
+    "regularization_strengths = [5e-4, 1e-3, 5e-3]\n",
     "for hs in hidden_sizes:\n",
     "    for lr in learning_rates:\n",
     "        for rs in regularization_strengths:\n",
@@ -821,16 +794,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.588\n"
+     ]
+    }
+   ],
    "source": [
     "# Run your neural net classifier on the test set. You should be able to\n",
     "# get more than 55% accuracy.\n",
     "\n",
-    "test_acc = (net.predict(X_test_feats) == y_test).mean()\n",
+    "test_acc = (best_net.predict(X_test_feats) == y_test).mean()\n",
     "print(test_acc)"
    ]
   },
